traversal.snake.Snake.scala.error
Compilation error:
Snake:3: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
if (getDirection()==Direction.EAST) 
^Snake:4: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
{left();test=(!isFacingWall); right()}; if (getDirection()==Direction.WEST) {right(); test=(!isFacingWall); left()}; return(test)}
^Snake:4: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
{left();test=(!isFacingWall); right()}; if (getDirection()==Direction.WEST) {right(); test=(!isFacingWall); left()}; return(test)}
                                        ^Snake:4: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
{left();test=(!isFacingWall); right()}; if (getDirection()==Direction.WEST) {right(); test=(!isFacingWall); left()}; return(test)}
                                                                                                                     ^